<resources>
    <string name="uhc">UHC</string>

    <string name="service_enabled">Service Enabled</string>
    <string name="remote_wakeup">Remote Wakeup</string>
    <string name="app_description">Connects to a TCP server to receive commands to wake the screen up. Can be used e.g for home automation screens, to only turn the tablet on when there\'s movement in the area.</string>
    <string name="action_settings">Settings</string>
    <string name="action_playpause">Play/Pause</string>
    <string name="title_activity_main">UHC</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_connection">Connection</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_hostname">Hostname</string>
    <string name="pref_title_port">Port number</string>
    <string name="pref_port_default">9999</string>
    <string name="pref_wakeup">Automatic Wake-up</string>
    <string name="pref_wakeup_summ">Turn on the screen if nearby movement is detected</string>
    <string name="pref_title_wakeup_zone">Zone number triggering screen wakeup</string>
    <string name="pref_header_display">Display</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="temp_section_format">Hello from section: %s</string>
    <string name="hifi_volume_down">HiFi volume down</string>
    <string name="hifi_volume_up">Hifi volume up</string>
    <string name="str_media_volume">Media volume</string>
    <string name="previous_track">Previous track</string>
    <string name="next_track">Next track</string>
    <string name="loading">Loading...</string>
    <string name="defaultTrackTimes">--:--/--:--</string>
    <string name="connecting">Connecting...</string>
    <string name="entry_type_indication">Entry type indication</string>
    <string name="hifi">HiFi</string>
    <string name="projector">Projector</string>
    <string name="airconditioner">Airconditioner</string>
    <string name="cozy_mode">Cozy</string>
    <string name="movie_mode">Movie</string>
    <string name="fan_auto">A</string>
    <string name="fan_low">Lo</string>
    <string name="fan_medium">Med</string>
    <string name="fan_high">Hi</string>
    <string name="hold_off">Hold off</string>
</resources>
