<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/volumeDownButton"
            style="?android:borderlessButtonStyle"
            android:src="@drawable/ic_volume_down_black_24dp"
            android:contentDescription="@string/hifi_volume_down" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/volumeUpButton"
            android:src="@drawable/ic_volume_up_black_24dp"
            style="?android:borderlessButtonStyle"
            android:contentDescription="@string/hifi_volume_up" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/volumeSeekBar"
            android:layout_weight="1"
            android:contentDescription="@string/str_media_volume"
            android:layout_gravity="center"
            android:max="100"
            android:progress="0" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/prevTrackButton"
            style="?android:borderlessButtonStyle"
            android:src="@drawable/ic_skip_previous_black_24dp"
            android:contentDescription="@string/previous_track" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextTrackButton"
            style="?android:borderlessButtonStyle"
            android:src="@drawable/ic_skip_next_black_24dp"
            android:contentDescription="@string/next_track" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/trackLabel"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/defaultTrackTimes"
            android:id="@+id/trackTimes"
            android:textStyle="italic" />
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trackPositionSeekBar"
        android:max="10000" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/repeatButton"
            android:src="@drawable/ic_repeat_black_24dp"
            style="?android:borderlessButtonStyle" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/shuffleButton"
            android:src="@drawable/ic_shuffle_black_24dp"
            style="?android:borderlessButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="Add..."
            android:id="@+id/addButton"
            android:drawableLeft="@drawable/ic_queue_black_24dp"
            style="?android:borderlessButtonStyle" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/trackListScrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/trackListContainerLayout">

        </LinearLayout>
    </ScrollView>

</LinearLayout>